# gs4ps2qt

./: .gitignore  CMakeLists.txt  README.md  frameviewerdialog.ui  gsdump.cpp  gsdump.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ps2client.cpp  ps2client.h  screenshotdialog.cpp  screenshotdialog.h  screenshotdialog.ui
.github/workflows/: generic-build.yml  master-release.yml
